--- a/gb/23/3/12/n13948840.md
+++ b/gb/23/3/12/n13948840.md
@@ -37,38 +37,38 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944879.md#1">首创AI教具展创意 发想无烟校园或无烟的家</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13946957.md#1">AI可助火星探测车寻找外星生命吗？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13948005.md#1">AI将使网络生活发生重大改变</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963588.md#1">增加碳税对亚省家庭的影响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957230.md#1">亚省省长峰会召开 增加移民安置拨款</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950268.md#1">新一轮“亚省在召唤”活动针对大西洋省份及安大略省工人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946796.md#1">购房者最能承受十大城市 卡尔加里埃德蒙顿入围</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946780.md#1">亚省青少年恶作剧导致HBO电影片场被封锁</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257087.md#1" target="_blank">【征文】凌晓辉：贞洁论（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">一趟印度之行 让她找到生命回归之路</a></li>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/6/n10032641.md#1" target="_blank">作恶者鉴：迫害法轮功终难逃法网</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/5/n10539350.md#1" target="_blank">中国奥运泳坛明星经历的人生巨变</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947935.md#1">才能出众护国大将军 因一句话遭现世报而绝嗣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943724.md#1">妙不可言的舞剧《草船借箭》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944812.md#1">柳夫人天赋异禀知天命 功夫奇特一人胜千军</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923682.md#1">【古道人生】看相的说他恐怕冻饿而死 他却中了进士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951213.md#1">【环球直击】无人机冲撞事件 美防长谴责俄罗斯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951402.md#1">【有冇搞错】浙商南官 李强踏进“八卦阵”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951648.md#1">【十字路口】中共自曝无力对台出兵？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950264.md#1">女作家铁凝任中共人大副委员长 涉黄小说被翻出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949967.md#1">传李强祖屋禁止靠近 祖坟24小时专人看管</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950215.md#1">美军：MQ-9无人机遭俄苏-27撞击坠海</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949642.md#1">赵薇遭封杀一年半 47岁生日自拍照显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949692.md#1">杨紫琼获封奥斯卡影后 李安2句话恭喜好友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949723.md#1">李冰冰贺杨紫琼封后 杨紫的粉丝抢着回复惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950227.md#1">疫情之后又确诊甲流 于和伟自嘲：挺会赶时髦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949906.md#1">奥斯卡典礼 卡卡素颜素装登台献唱《牵我的手》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950256.md#1">大豆抗癌又降血压 正确食用很重要</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945694.md#1">保持大脑敏锐 胡萝卜不可忽视的6大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947423.md#1">传统药物破坏身体系统 8种自然疗法缓解头痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943994.md#1">想延年益寿？远离垃圾食物的诱惑是最好方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949934.md#1">研究显示 戴眼罩睡觉可改善认知能力</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963059.md#1">【全球新闻】成员国全部批准 芬兰成北约第31个成员国</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961914.md#1">周兴哲与赵岱新秘婚 今甜晒合照宣布“怀孕”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/12/n13948840.htm">亚省首款AI设计啤酒登场</a></p><hr>
