--- a/gb/22/11/5/n13860179.md
+++ b/gb/22/11/5/n13860179.md
@@ -71,31 +71,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9817759.md#1" target="_blank">袁斌：“十月革命”真相与俄国三大倒退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581061.md#1" target="_blank">法轮功义务传功遍全球 事实亲历揭穿中共诽谤</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285995.md#1" target="_blank">杨宁：从市委书记出丑说被膜拜的延安真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947935.md#1">才能出众护国大将军 因一句话遭现世报而绝嗣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923682.md#1">【古道人生】看相的说他恐怕冻饿而死 他却中了进士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946484.md#1">睦妯娌和兄弟 她们留下千古佳话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951762.md#1">【探索时分】巴赫穆特拚死战 乌军为何不退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952290.md#1">【晚间新闻】中国“甲流”引爆心肌炎 症状似新冠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951939.md#1">【财商天下】中国车企掀降价飓风 30多品牌参战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950970.md#1">【快讯】郭文贵涉嫌欺诈在纽约被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950292.md#1">大陆女演员被困北京酒店厕所 逃脱后报警无果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950663.md#1">中共高层换届“有人主动退”？专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951063.md#1">被指撞脸杨紫琼 杨绣惠晒同框合照 网友嗨翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950227.md#1">疫情之后又确诊甲流 于和伟自嘲：挺会赶时髦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949906.md#1">奥斯卡典礼 卡卡素颜素装登台献唱《牵我的手》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951154.md#1">白冰冰曝费玉清退休生活：来无影去无踪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950322.md#1">蔡卓妍晒与5大咖合照 张学友一举动笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950256.md#1">大豆抗癌又降血压 正确食用很重要</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947423.md#1">传统药物破坏身体系统 8种自然疗法缓解头痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943994.md#1">想延年益寿？远离垃圾食物的诱惑是最好方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950702.md#1">什么是“慢游”？有何好处？ 专家细说分明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949934.md#1">研究显示 戴眼罩睡觉可改善认知能力</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963341.md#1">【马克时空】美陆战队坦克兵谈M1A1（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/5/n13860179.htm">【时事人物】从青铜器到防弹衣——曹兴诚收藏的逆旅人生</a></p><hr>
