--- a/gb/23/1/15/n13907610.md
+++ b/gb/23/1/15/n13907610.md
@@ -26,39 +26,39 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/10/n13756706.md#1">与黄明志合作MV破千万点击 新锐导演曝成功关键</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/11/n13757350.md#1">黄明志发新MV《我们的海阔天空》港人感动流泪</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/21/n13888637.md#1">黄明志曾因胃病暴瘦 最新健检结果令医生惊讶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950021.md#1">黄明志4月启动世界巡演 遗憾香港站卡关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949987.md#1">黄明志巡演 台湾首站 保证最惊喜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949890.md#1">林俊逸发台语创作单曲 MV由迪士尼动画师操刀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949875.md#1">《嗨！营业中2》将开录 炎亚纶期待更多挑战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963302.md#1">高雄巨蛋开唱解禁 阿妹状态佳“铅笔腿现形”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963277.md#1">《油麻菜籽》推修复版 柯一正陈秋燕重回拍摄地</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962915.md#1">防弹少年团V连续104周蝉联日本人气榜冠军</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/3/n9919603.md#1" target="_blank">王江火：“抗美援朝”不具备正义性</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/9/14/n8301021.md#1" target="_blank">周向阳案辩词：为捍卫法律正义与真善忍而辩</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/1/n10824187.md#1" target="_blank">一本书让70岁的她成为有福人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943724.md#1">妙不可言的舞剧《草船借箭》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949308.md#1">【环球直击】硅谷银行倒闭引恐慌 美监管机构急应对</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948967.md#1">【环球直击】信任危机？ 习第三任期称“人民信任”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949693.md#1">【新唐人大视野】美英澳水下合作 直刺北京软肋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948537.md#1">人大常委得票6人垫底 1人反对弃权票近2千</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947527.md#1">习近平“1号训令”变低调 学者析背后诡计</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948474.md#1">袁红冰：两会展现谎言 中共面临惊涛骇浪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948769.md#1">梁朝伟亚洲电影大奖封帝 刘嘉玲打开名单惊呆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948798.md#1">“什么戏都想演” 洪金宝叹演动作片难糊口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948969.md#1">奥斯卡获奖名单揭晓 杨紫琼成首位亚裔影后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949642.md#1">赵薇遭封杀一年半 47岁生日自拍照显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949469.md#1">2月份美国房市 拐点出现！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946765.md#1">一房二用 10种隐形床打造复合空间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948420.md#1">退休的最大挑战是什么？哈佛85年研究释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931077.md#1">典型毒亲事例之二：过分对孩子强调责任心</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963341.md#1">【马克时空】美陆战队坦克兵谈M1A1（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/15/n13907610.htm">黄明志许愿挑战小巨蛋 开万人演唱会</a></p><hr>
